--- a/blog/myblog/templates/myblog/base.html
+++ b/blog/myblog/templates/myblog/base.html
@@ -11,7 +11,7 @@
     <!-- Шаш CSS -->
     <link rel="stylesheet" href="{% static '/css/style.css' %}">
 
-    <title>{% block title %}{% endblock %}.</title>
+    <title>{% block title %}{% endblock %}</title>
   </head>
   <body>
 
