--- a/blog/myblog/templates/myblog/index.html
+++ b/blog/myblog/templates/myblog/index.html
@@ -20,6 +20,9 @@
             <div class="card-body">
               <h5 class="card-title">{{ post.h1 }}</h5>
               <p class="card-text">{{ post.description|safe|truncatechars:70 }}</p>
+                {% for tag in post.tag.all %}
+                  <a href="{% url 'tag' tag.slug %}" class="mr-1 badge badge-info">#{{ tag }}</a>
+                {% endfor %}
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a href="{% url 'post_detail' slug=post.url %}" class="btn btn-sm btn-outline-secondary">Подробнее</a>
